Async database operations, modified sign system, and minor improvements
Seperated signs into classes impenting a new class called SignHandler that will run a onFinish method when user is finished

ALl database operations are fully async